<resources>
    <string name="app_name">Ourspace</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Show map</string>

    <string name="api_key">AIzaSyDPpGQFjEWTKSP4m66MWEeV3MweciUQgkI</string>
    <string name="sender_id">552203069816</string>
    <!-- Navigation drawer-->
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_dashboard">Dashboard</string>
    <string name="nav_title_spaces">Spaces</string>
    <string name="nav_title_tags">Tags</string>
    <string name="nav_title_users">Users</string>
    <string name="nav_title_top">Near me</string>
    <string name="nav_title_log_out">Log out</string>

</resources>
